# nu_plugin_hash

./: .gitignore  Cargo.toml  LICENSE  README.md  toolkit.nu
src/: main.rs
